* Load openapi specifications from jar maven dependency (GAV) of project #1357
- Added support for zipped (jar/zip) OpenAPI specifications.
- Introduced `ZippedSpecInputModel` and `JarOrZipGAVCoordinateOpenApiSpecInputProvider`.
- Updated `SpecItemConfig` and `CodegenConfig` to allow specification of multiple GAV-based files.
- Reworked tests to include parameterized testing for multiple GAV sources.
- Simplified YAML-based GAV provider to inherit from `AbstractGAVCoordinateOpenApiSpecInputProvider`.

* added include-gavs option & docu

* formating

* review

* review

* doc added

* review

* review#2

---------

Co-authored-by: Michael Sonnleitner <michael.sonnleitner2@raiffeisen-software.at>