@@ -7,7 +7,6 @@ import java.util.List;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -19,7 +18,7 @@ public final class OpenApiConfigValidator {
     private static final Logger LOGGER = LoggerFactory.getLogger(OpenApiConfigValidator.class);
 
     static final Pattern CONFIG_PATTERN = Pattern.compile(
-            "quarkus\\.openapi-generator\\.codegen\\.(spec.(?<specId>[\\w\\-]*)\\.)?(?<configName>[A-Za-z0-9_\\-]*)\\.?(?<configMap>.+)?");
+            "quarkus\\.openapi-generator\\.codegen\\.((spec|gav).(?<specId>[\\w\\-]*)\\.)?(?<configName>[A-Za-z0-9_\\-]*)\\.?(?<configMap>.+)?");
 
     private OpenApiConfigValidator() {
     }
@@ -29,7 +28,7 @@ public final class OpenApiConfigValidator {
                 .filter(pn -> pn.startsWith("quarkus.openapi-generator.codegen"))
                 .map(CONFIG_PATTERN::matcher)
                 .filter(Matcher::find)
-                .collect(Collectors.toList());
+                .toList();
 
         if (!userOpenApiConfigurations.isEmpty()) {
             Set<String> unsupportedConfigNames = new HashSet<>();
